# COP-PILOT-Horizon-s-program

./: .gitignore  AgroChain_Presentation_Bilingual.md  AgroChain_Presentation_v2.md  DESCA_HorizonEurope_2.1.docx  extractor.py  update_docx.py
.github/workflows/: cop-pilot-onboarding.yml
agrochain/: Anchor.toml  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
agrochain/backend/: .env.example  Dockerfile  requirements.txt
agrochain/backend/app/: config.py  main.py
agrochain/backend/app/models/: grain_lot.py  ngsi_ld.py
agrochain/backend/app/ngsi/: translator.py
agrochain/backend/app/routers/: auth.py  lots.py  payments.py
agrochain/backend/app/services/: cadastre_service.py  echerha_service.py  fiat_escrow_service.py  kep_service.py  mqtt_service.py  payment_oracle.py  phyto_service.py  solana_service.py  ukas_service.py
agrochain/contracts/grain-lot-registry/: Cargo.toml
agrochain/contracts/grain-lot-registry/src/: lib.rs
agrochain/contracts/trade-escrow/: Cargo.toml
agrochain/cop-pilot-onboarding/: tmf633_service_spec.json
agrochain/frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
agrochain/frontend/src/: App.tsx  i18n.tsx  index.css  store.tsx
agrochain/scripts/: deploy.sh
agrochain/tests/: agrochain.ts
files/: AGROCHAIN-UA_CPOC1_Annexes_DoH_SME_Ethics.docx  AGROCHAIN-UA_CPOC1_Annexes_DoH_SME_Ethics_updated.docx  AGROCHAIN-UA_CPOC1_Proposal_20260504.docx  AGROCHAIN-UA_CPOC1_Proposal_20260504_updated.docx  ~$ROCHAIN-UA_CPOC1_Proposal_20260504_updated.docx
(+19 files in other folders)
